--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "aos": "^2.3.4",
     "astro": "^5.14.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
